--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>coming soon™</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <link id="favicon" rel="icon" type="image/png" href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link id="favicon" rel="icon" type="image/png" href="" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.6/pixi.min.js"></script>
+    <script src="assets/distribution.js"></script>
     <script src="main.js" defer></script>
-</head>
+  </head>
 
-<body>
-    <audio id='v' controls crossOrigin="anonymous" src="https://upload.wikimedia.org/wikipedia/en/3/3d/Sample_of_Daft_Punk%27s_Da_Funk.ogg"
-        type="video/mp4"></audio>
-</body>
-
+  <body>
+    <audio
+      id="v"
+      controls
+      crossOrigin="anonymous"
+      src="https://upload.wikimedia.org/wikipedia/en/3/3d/Sample_of_Daft_Punk%27s_Da_Funk.ogg"
+      type="video/mp4"
+    ></audio>
+    <div id="container"></div>
+  </body>
 </html>
